Fix guitar label clipping: overflow visible, taller container

--- a/css/style.css
+++ b/css/style.css
@@ -2160,8 +2160,9 @@ a.album-track-link:hover .track-num {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 420px;
-  overflow: hidden;
+  height: 450px;
+  overflow: visible;
+  margin-bottom: 1.5rem;
 }
 
 .guitar-hang {
